# Copyright (c) 2020 MicroDoc Software GmbH.
# See the "LICENSE.txt" file at the top-level directory of this distribution.
#
# Licensed under the the MIT license. This file may not be copied, modified,
# or distributed except according to those terms.

[package]
name = "process_vm_io"
version = "1.0.0" # Remember to update `html_root_url`.
description = "I/O access to virtual memory contents of processes"
authors = [
    "Koutheir Attouchi <koutheir@gmail.com>"
]
homepage = "https://github.com/mdcssw/process_vm_io"
repository = "https://github.com/mdcssw/process_vm_io"
documentation = "https://docs.rs/process_vm_io"
readme = "README.md"
license = "MIT"
edition = "2018"
categories = [
    "api-bindings",
    "development-tools",
    "memory-management",
    "os"
]
keywords = [
    "proc",
    "maps",
    "process_vm_readv",
    "process_vm_writev",
    "ptrace",
    "I/O",
    "memory",
    "inject",
    "monitor",
    "debug",
    "test"
]

[dev-dependencies]
assert_matches = { version = "1.3" }

[dependencies]
backtrace   = { version = "0.3" }
lazy_static = { version = "1.4" }
libc        = { version = "0.2" }
smallvec    = { version = "1.1" }
