[package]
name = "process_vm_io"
version = "1.0.8" # Remember to update `html_root_url` and `dependency status` link.
description = "I/O access to virtual memory contents of processes"
authors = [
    "Koutheir Attouchi <koutheir.attouchi@microdoc.com>"
]
homepage = "https://github.com/mdcssw/process_vm_io"
repository = "https://github.com/mdcssw/process_vm_io"
documentation = "https://docs.rs/process_vm_io"
readme = "README.md"
license = "MIT"
edition = "2021"
categories = [
    "api-bindings",
    "development-tools",
    "memory-management",
    "os"
]
keywords = [
    "process_vm_readv",
    "process_vm_writev",
    "ptrace",
    "memory",
    "inject",
]

[dev-dependencies]
assert_matches = { version = "1.5" }

[dependencies]
backtrace   = { version = "0.3" }
lazy_static = { version = "1.4" }
libc        = { version = "0.2" }
smallvec    = { version = "1.10" }
